plang/testing/logs/false-incorrect/160/program160.p.p
js2bI (ew (DrZ)) Zr2k.
nGbk p :- qcKm (vk OWe6 Vmmpj).


fMK :- veAvv (X); xuq lSg O, bL5 I (Z) TAW (qo6s MW (r0Y DTgGK (BVC) (IN8Y) (oj M)) (XCmaw)), f (Ii621), wDthT F (PWQcP) (aea1I), aN3vz (JT), d7TH, rvOY XwY, (c3 (VRGD) (EAhM)); tMkx (mgT (r9L lYqM6 (ues (lQrK1 (IZ) omoG7) (MJL7)) (i9 rZf1X (L5) (t2yA8 (I3p7) f0 ZTt) jXT4) e)) P; d V1E, injC (QCK) (WoS8) (Ez), ((dbdl xhF)), (((bmS wxf (h42Av (KCuDe) (Qvg) (cE))))).

xpic :- (gEd (a (NI) (ypSo ek) (Epwz) fdJj) hlE sGfR), tFVQz (LY2f0) kgpGu (s (fNM3) (W9xFD) FMFy8 (rIBPm iFObb M3unZ Pl0L0 B6f)) Z8.


o6Re (qmt (Pzus) (bxid0 (Zyny)) D LXhv).


d (UE3) (CC1yV) (KyzMS).


qhlW :- (lr M nB aQ Us; nw7W; wMuD).


h (QUl) :- h3a7 (g5aqJ (zEk4c (Y) (D02pR) zUit) (eWF (uZhf Vso (DSwRC)) (aTJda (xibBg (K) b8 dSehZ) uR9C7) (Y435O) (lC qZOj)) (o (CkE7)) t4Mcz) J (Tx) (vuJ4 c76X c); jbEsH.

lq3Xf (a5 LL eU) nDMQ ud :- (((x)), k5 hmbF Mes (ByN) (t3M (i (Eu) qR v KGKKI) oE)).


i syw2G (QrE) :- (ty7jd (wT n) Gob7 (Nmm), b73; (nyq0p F3PX vFw fx; m (zW)), l1DKR; gzcU (JL) mROb F, mwrS jD (q LSS s) T O; xS; (v1lpG), e8 abyD (DvnmV) tUI (HtI), apP (j (pPha U (sYnJe (mcAk svFT dU7E (OFX) (kPDEx d6mr)) Z5Mu (C) P)) (s) (jnyee TBC O9TjX))).
? ((b r31H rxfR; gwn TA); q (Ryj); w JZrT1, l4g; kb (x1 (FLG)) jK), (ra7z3 (dqF rHNLl MTr Su XH) dfJru (FWzmg)).